--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -19,10 +19,17 @@
         android:layout_height="1dp"
         android:layout_marginVertical="20dp"
         android:background="?android:attr/dividerVertical" />
+
     <TextView
         android:id="@+id/coffee_desc"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="103dp"
         android:gravity="center"
         tools:text="@string/affogato_desc" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Back" />
 </LinearLayout>
